add automation dashboards

--- a/src/main/resources/webserver/template/automation/admin/headline.html
+++ b/src/main/resources/webserver/template/automation/admin/headline.html
@@ -28,6 +28,10 @@
             <img src="/static/img/icon/sensorvalues.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Sensorwerte
         </a>
+        <a href="/automation/admin/dashboard" class="item {% if module == 'dashboard' %}active{% endif %}">
+            <img src="/static/img/icon/dashboard.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
+            Dashboards
+        </a>
         <a href="/automation/admin/room" class="item {% if module == 'room' %}active{% endif %}">
             <img src="/static/img/icon/room.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             R&auml;ume
