--- a/src/main/resources/webserver/template/automation/admin/index.html
+++ b/src/main/resources/webserver/template/automation/admin/index.html
@@ -34,9 +34,9 @@
                     <div class="header">Sensorwerte</div>
                 </div>
             </div>
-            <div class="card" onclick="window.location = '/automation/admin/dash'">
+            <div class="card" onclick="window.location = '/automation/admin/dashboard'">
                 <div class="image">
-                    <img src="/static/img/icon/dash.png">
+                    <img src="/static/img/icon/dashboard.png">
                 </div>
                 <div class="content">
                     <div class="header">Dashboards</div>
