--- a/src/main/resources/webserver/template/automation/admin/room/roombuttonelementform.html
+++ b/src/main/resources/webserver/template/automation/admin/room/roombuttonelementform.html
@@ -128,9 +128,13 @@
     </script>
 </head>
 <body>
-{% include '/webserver/template/automation/admin/headline.html' with {module: 'roomelement'} %}
+{% if dashboard %}
+{% include '/webserver/template/automation/admin/headline.html' with {module: 'dashboard'} %}
+{% else %}
+{% include '/webserver/template/automation/admin/headline.html' with {module: 'room'} %}
+{% endif %}
 <main class="ui main container">
-    <form class="ui form" id="buttonelement" action="/automation/admin/roombuttonelementform?roomid={{ room.getId().get() | escape }}&id={{ roomelement.getId().get() | escape }}" method="post">
+    <form class="ui form" id="buttonelement" action="/automation/admin/roombuttonelementform?{% if dashboard %}dash&{% endif %}roomid={{ room.getId().get() | escape }}&id={{ roomelement.getId().get() | escape }}" method="post">
         <h1 class="ui header top attached">Button {% if addElement %}hinzuf&uuml;gen{% else %}bearbeiten{% endif %}</h1>
         {% if error is defined %}
         <div class="ui visible icon message error attached">
