--- a/src/main/resources/webserver/template/automation/user/headline.html
+++ b/src/main/resources/webserver/template/automation/user/headline.html
@@ -55,6 +55,19 @@
             </div>
         </div>
         <div class="right menu">
+            {% if module == 'dash' %}
+            <div class="ui icon item dropdown">
+                <i class="pencil alternate icon large"></i>
+                <div class="menu">
+                    {% for dashboard in dashboards %}
+                    <a class="item {% if dashboard.getId().equals(activeDashboard.getId()) %}active{% endif %}" href="/automation/index?id={{ dashboard.getId().get() | escape }}">
+                        <img class="icon image" src="/static/img/iconset/{{ dashboard.getIconFile() | escape }}">
+                        <span style="display: inline-block; margin-top: 8px;">{{ dashboard.getDisplayText() | escape }}</span>
+                    </a>
+                    {% endfor %}
+                </div>
+            </div>
+            {% endif %}
             <a href="/automation/admin/index" class="item"><i class="setting icon large"></i></a>
         </div>
     </div>
