fix sync error at dashboards

--- a/src/main/resources/webserver/template/automation/user/index.html
+++ b/src/main/resources/webserver/template/automation/user/index.html
@@ -8,13 +8,199 @@
     <link rel="manifest" href="/static/manifest/automationmanifest.json">
     <script type="text/javascript">
 
+        function switchDevice(roomId, devId, command) {
+
+            $.getJSON('/automation/switch?roomid=' + roomId + '&id=' + devId + '&command=' + command)
+                .done(function(data, textStatus) {
+
+                    if(textStatus == 'success' && data.success == true) {
+
+                        //Befehl erfolgreich ausgeführt
+                        $.notify("Befehl erfolgreich ausgeführt", "success");
+                    } else {
+
+                        //Fehler
+                        $.notify(data.message, "error");
+                    }
+                })
+                .fail(function () {
+
+                    //Fehler
+                    $.notify("Der Befehl konnte nicht ausgeführt werden", "error");
+                });
+        }
+
+        function sync() {
+
+            if (window.EventSource) {
+
+                var eventSource = new EventSource('/automation/ssesync?roomid={{ activeDashboard.getId().get() }}', { withCredentials : true });
+                eventSource.onmessage = function(entry) {
+
+                    //JOSN parsen
+                    var data = jQuery.parseJSON(entry.data.trim());
+
+                    //Buttons aktualisieren
+                    if(data.buttons && data.buttons.length > 0) {
+
+                        for(var i = 0; i < data.buttons.length; i++) {
+
+                            var e = data.buttons[i];
+                            if(e.state) {
+
+                                //an
+                                var buttonOn = $('#a' + e.id + '_on');
+                                var buttonOff = $('#a' + e.id + '_off');
+                                var onText = buttonOn.text();
+                                var offText = buttonOff.text();
+                                buttonOn.html('<i class="check icon"></i>' + onText);
+                                buttonOff.html(offText);
+                            } else {
+
+                                //aus
+                                var buttonOn = $('#a' + e.id + '_on');
+                                var buttonOff = $('#a' + e.id + '_off');
+                                var onText = buttonOn.text();
+                                var offText = buttonOff.text();
+                                buttonOn.html(onText);
+                                buttonOff.html('<i class="check icon"></i>' + offText);
+                            }
+                        }
+                    }
+
+                    //Sensorwerte aktualisieren
+                    if(data.sensors && data.sensors.length > 0) {
+                         for(var i = 0; i < data.sensors.length; i++) {
+
+                             var e = data.sensors[i];
+                             $('#a' + e.id).text(e.value);
+                        }
+                    }
+
+                    //Virtuelle Sensorwerte aktualisieren
+                    if(data.vSensors && data.vSensors.length > 0) {
+
+                        for(var i = 0; i < data.vSensors.length; i++) {
+
+                            var e = data.vSensors[i];
+                            if(e.avg) {
+
+                                $('#a' + e.id + '_avg').text(e.avg);
+                            }
+                            if(e.sum) {
+
+                                $('#a' + e.id + '_sum').text(e.sum);
+                            }
+                            if(e.min) {
+
+                                //$('#a' + e.id + '_min').text(e.min);
+                            }
+                            if(e.max) {
+
+                                //$('#a' + e.id + '_max').text(e.max);
+                            }
+                        }
+                    }
+                }
+            } else {
+
+                $.getJSON('/automation/sync?roomid={{ activeDashboard.getId().get() }}')
+                .done(function(data, textStatus) {
+
+                    if(textStatus == 'success' && data.success == true) {
+
+                        //Buttons aktualisieren
+                        if(data.buttons && data.buttons.length > 0) {
+
+                            for(var i = 0; i < data.buttons.length; i++) {
+
+                                var e = data.buttons[i];
+                                if(e.state) {
+
+                                    //an
+                                    var buttonOn = $('#a' + e.id + '_on');
+                                    var buttonOff = $('#a' + e.id + '_off');
+                                    var onText = buttonOn.text();
+                                    var offText = buttonOff.text();
+                                    buttonOn.html('<i class="check icon"></i>' + onText);
+                                    buttonOff.html(offText);
+                                } else {
+
+                                    //aus
+                                    var buttonOn = $('#a' + e.id + '_on');
+                                    var buttonOff = $('#a' + e.id + '_off');
+                                    var onText = buttonOn.text();
+                                    var offText = buttonOff.text();
+                                    buttonOn.html(onText);
+                                    buttonOff.html('<i class="check icon"></i>' + offText);
+                                }
+                            }
+                        }
+
+                        //Sensorwerte aktualisieren
+                        if(data.sensors && data.sensors.length > 0) {
+
+                            for(var i = 0; i < data.sensors.length; i++) {
+
+                                var e = data.sensors[i];
+                                $('#a' + e.id).text(e.value);
+                            }
+                        }
+
+                        //Virtuelle Sensorwerte aktualisieren
+                        if(data.vSensors && data.vSensors.length > 0) {
+
+                            for(var i = 0; i < data.vSensors.length; i++) {
+
+                                var e = data.vSensors[i];
+                                if(e.avg) {
+
+                                    $('#a' + e.id + '_avg').text(e.avg);
+                                }
+                                if(e.sum) {
+
+                                    $('#a' + e.id + '_sum').text(e.sum);
+                                }
+                                if(e.min) {
+
+                                    //$('#a' + e.id + '_min').text(e.min);
+                                }
+                                if(e.max) {
+
+                                    //$('#a' + e.id + '_max').text(e.max);
+                                }
+                            }
+                        }
+                    } else {
+
+                        //Fehler
+                        if(data.message) {
+
+                            $.notify('Synchronisationsfehler "' + data.message + '"', "error");
+                        } else {
+
+                            $.notify('Synchronisationsfehler', "error");
+                        }
+                    }
+                })
+                .fail(function () {
+
+                    //Fehler
+                    $.notify("Die Synchronisation ist fehlgeschlagen", "error");
+                });
+                setTimeout('sync()', 500);
+            }
+        }
+
+        $(function() {
+            sync();
+        });
     </script>
 </head>
 <body>
 {% include '/webserver/template/automation/user/headline.html' with {module: "dash", rooms: rooms, dashboards: dashboards, activeDashboard: activeDashboard} %}
 <main class="ui main">
     <div class="ui container" style="margin-bottom: 20px;">
-
         {% if success is defined %}
         <div class="ui attached message icon {% if success %}success{% else %}error{% endif %}">
             {% if success %}
@@ -36,13 +222,13 @@
                 {% for element in activeDashboard.getRoomElemenstSorted() %}
                     {% if element.isDisabled() == false %}
                         {% if element.getType() == 'DIVIDER_ELEMENT' %}
-                            {% include '/webserver/template/automation/user/elements/divider.html' %}
+                            {% include '/webserver/template/automation/user/elements/divider.html' with {activeRoom: activeDashboard} %}
                         {% elseif element.getType() == 'BUTTON_ELEMENT' %}
-                            {% include '/webserver/template/automation/user/elements/button.html' %}
+                            {% include '/webserver/template/automation/user/elements/button.html' with {activeRoom: activeDashboard} %}
                         {% elseif element.getType() == 'SENSOR_ELEMENT' %}
-                            {% include '/webserver/template/automation/user/elements/sensor.html' %}
+                            {% include '/webserver/template/automation/user/elements/sensor.html' with {activeRoom: activeDashboard} %}
                         {% elseif element.getType() == 'VIRTUAL_SENSOR_ELEMENT' %}
-                            {% include '/webserver/template/automation/user/elements/virtualsensor.html' %}
+                            {% include '/webserver/template/automation/user/elements/virtualsensor.html' with {activeRoom: activeDashboard} %}
                         {% endif %}
                     {% endif %}
                 {% endfor %}
